1998-10-06  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (dirs): New tests, tests for some cases involving
	admins who do surgery on the repository.

1998-10-03  Johannes Stezenbach <johannes.stezenbach@propack-data.de>

	* vers_ts.c (Version_TS): If UTIME_EXPECTS_WRITABLE, if
	necessary change the file to be writable temporarily to set its
	modification time.

1998-10-03  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (handle_error): Add comment about indicating which
	errors are from the server.

1998-10-01  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (devcom-180): Allow one digit day.

1998-09-30  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c (main): Don't call Name_Root if -d specified.
	* recurse.c (do_recursion, do_dir_proc): Don't check CVS/Root
	if -d was specified.
	* import.c (import): Indentation fix.
	* sanity.sh (multiroot): Update for this change.
	(reposmv): New test, tests for this.

1998-09-28  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (multiroot2): New test, tests some nested directory
	cases.

1998-09-25  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (multiroot): Change a few comments which said modules
	when they meant directories.

1998-09-25  Jim Meyering  <meyering@ascend.com>

	* sanity.sh (devcom-180): Add 0-9 to the range of characters allowed
	in hostname regexp.

1998-09-25  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (log2): New test log2-7a tests for one error handling
	case.  Add a comment about another.

1998-09-24  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Change crerepos test back to :ext: (for several
	reasons; see comments).

1998-09-24  Noel Cragg  <noel@swish.red-bean.com>

	* sanity.sh (rcslib-symlink-5, rcslib-symlink-6): new tests to
	check the operation of "tag" when there are symlinks in the
	repository.

	* rcs.c (RCS_checkin): remove old code that resolved the symlink
	and call resolve_symlink instead.